// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input component Should be disabled with placeholder and value 1`] = `
<input
  className="input"
  disabled={true}
  placeholder="hello tests"
  value="TEST"
/>
`;

exports[`Input component Should be large and readOnly 1`] = `
<input
  className="input is-large"
  readOnly={true}
/>
`;

exports[`Input component Should be rounded 1`] = `
<input
  className="input is-rounded"
/>
`;

exports[`Input component Should be type email and a with success colors 1`] = `
<input
  className="input is-success"
  type="email"
/>
`;

exports[`Input component Should concat classname in props with Bulma classname 1`] = `
<input
  className="input other-class this-is-a-test"
/>
`;

exports[`Input component Should exist 1`] = `[Function]`;

exports[`Input component Should have input classname 1`] = `
<input
  className="input"
/>
`;

exports[`Input component Should support focus state 1`] = `
<input
  className="input is-focused"
/>
`;

exports[`Input component Should support hovered state 1`] = `
<input
  className="input is-hovered"
/>
`;

exports[`Input component Should use inline styles 1`] = `
<input
  className="input"
  style={
    Object {
      "height": 250,
    }
  }
/>
`;
